
  - Misc bug fixes to improve reliability
  - Updated default renderer for server tab
  - Updated data parsing and default renderer and processor to work with new fb() PHP function
  - Implemented sorting of data headers based on numeric index
  - The default processor will now fail gracefully if there is a problem logging the data
	- The log mode string for console messages in the default processor is now case-insensitive

2008-04-07 - Release Version: 0.0.6.3

	- Implemented request processor that is called for every request in the background
	- Renamed headers to start with X-...
	- Added support for Firebug 1.1 (based on 1.1.0b12)	
	- Added current FirePHP version and OS info to update URL

2007-12-07 - Release Version: 0.0.5.26

	- Finished full jQuery support for renderer
	- Bugfix to make FirePHP work when Firebug is detached in its own window

2007-12-05 - Release Version: 0.0.5.24

	- Fixed incompatibility with HTML Validator extension: http://users.skynet.be/mgueury/mozilla/
	- Fixed unique renderer key to allow request scoping in generated HTML for Console and Net panels
	- Bugfix to make FirePHP work in Console panel with Ajax requests

2007-12-04 - Release Version: 0.0.5.23

	- Implemented explicit enable for each host and allowed sites menu & dialog
	- Only send FirePHP accept and user agent headers when firebug is enabled
	- Changed header name from FirePHP-Mask to FirePHP-RendererURL
	- Added support for javascript in the rendered HTML

2007-11-26 - Release Version: 0.0.5.22

	- Updated to ignore case of header names
  - Implemented data rendering in Server tab where data is fetched from response headers
	- Added "Server" tab to Firebug's Net panel requests
	- Abandoned previous idea in favor of simplicity
	
----------

  - Changed PINF-org.firephp-* headers to X-PINF-org.firephp-*
  - Updated UI design
  - Added variable inspector and viewer
  - Added console viewer
  - Added support for platform-specific CSS and added Mac look